# team-bath-rov-software

./: .flake8  .gitignore  .pre-commit-config.yaml  404.html  README.md  index.html  pyproject.toml
.github/workflows/: deploy-docs.yml
common/: MANIFEST.in  README.md  pyproject.toml  setup.py
common/common/data_interface/: __init__.py  telemetry_data.py
common/common/mqtt/: mqtt_config.py  publisher.py  schema_loader.py  subscriber.py  topics.yaml
common/common/mqtt/schemas/: float_telemetry.schema.json  project_status.schema.json  rov_command.schema.json  rov_telemetry.schema.json  video_frame.schema.json
common/common/network/: network_type.py
common/mqtt/schemas/: project_status.schema.json  rov_telemetry.schema.json
docs-site/: README.md  mkdocs.yml  pyproject.toml
docs-site/docs/general/: architecture.md  getting-started.md  git.md
docs-site/docs/other/25-26/: team.md
docs-site/site/: mkdocs.yml
docs-site/site/docs/: index.md
docs-site/site/docs/general/: development.md  pr.md  roadmap.md
docs-site/site/docs/projects/db-writer/: db-writer.md
docs-site/site/docs/projects/preprocessor/: preprocessor.md
docs-site/site/docs/projects/schema-registry/: schema-registry.md
docs-site/site/docs/projects/ui/: ui.md
general/architecture/: index.html
general/development/: index.html
general/getting-started/: index.html
general/git/: index.html
general/pr/: index.html
general/roadmap/: index.html
machine-learning/: README.md  pyproject.toml
machine-learning/crab_detection/: .gitignore  README.md  main.py  requirements.txt  verify_setup.py
machine-learning/crab_detection/scripts/: generate_data.py  predict.py  train.py
machine-learning/crab_detection/src/: pipeline.py
machine-learning/crab_detection/src/models/: rf_detr.py  yolov8.py
machine-learning/crab_detection/src/utils/: dataset.py  helpers.py  transforms.py
machine-learning/crab_detection/tests/: run_tests.py
machine-learning/src/: machine_learning.py
other/25-26/team/: index.html
packet-simulator/: README.md  pyproject.toml
packet-simulator/src/: packet_simulator.py  video_config.json
packet-simulator/src/data_interface/: float_data.py  network_type.py  rov_data.py  stdout_data.py  vector_data.py
packet-simulator/src/simulators/: float_telemetry_simulator.py  rov_telemetry_simulator.py  std_out_simulator.py  video_simulator.py
photogrammetry-backend/: README.md  pyproject.toml  requirements.txt
photogrammetry-backend/app/: config.py  main.py
photogrammetry-backend/app/models/: __init__.py  job.py  scaling.py
photogrammetry-backend/app/routers/: jobs.py  manual_cad.py  photogrammetry.py  scaling.py  upload.py
photogrammetry-backend/app/services/: __init__.py  job_manager.py  manual_cad_service.py  scaling_service.py
photogrammetry-backend/app/utils/: file_utils.py
photogrammetry-backend/docs/: photogrammetry-backend-plan.md
projects/db-writer/db-writer/: index.html
projects/preprocessor/preprocessor/: index.html
projects/schema-registry/schema-registry/: index.html
projects/ui/ui/: index.html
search/: search_index.json
telemetry-processor/: README.md  config.example.json  pyproject.toml
telemetry-processor/src/: __init__.py  telemetry_processor.py
telemetry-processor/src/aggregation/: __init__.py  aggregator.py
telemetry-processor/src/data_interface/: __init__.py  telemetry_data.py
telemetry-processor/src/filters/: __init__.py  base_filter.py  kalman_filter.py
telemetry-processor/src/input/: __init__.py  telemetry_receiver.py
telemetry-processor/src/output/: __init__.py  mqtt_publisher.py
telemetry-processor/tests/: __init__.py  conftest.py
video-processor/: README.md  processor_config.json  pyproject.toml
video-processor/src/: back_pressure_queue.py  simulate_packets.py  video_processor.py
video-processor/src/data_interface/: frame_metadata.py
video-processor/src/filters/: __init__.py  basic_filters.py
video-processor/src/metrics/: metrics_monitor.py
video-processor/src/mpegts/: mpegts_base.py  mpegts_client.py  mpegts_server.py  websocket_broadcaster.py
